[REFACTOR] CNPJ validation